--- a/shop/style-cart.css
+++ b/shop/style-cart.css
@@ -1,7 +1,7 @@
 html,
 body {
   height: 100%;
-  background-image: url(../shop/image/gỗ.jpg);
+  background-image: url(../shop/image/tường.jpg);
   background-size: cover;
   background-position: center;
   background-attachment: fixed; /* cho hiệu ứng parallax nhẹ */
